# vero

./: Cargo.toml  Makefile  README.md  deny.toml  docker-compose.yml
.github/: dependabot.yml
.github/workflows/: build.yml
migrations/: 1_create_projects_table.up.sql
src/: dockerhub.rs  main.rs  storage.rs
