[package]
name = "vero"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.55"
async-trait = "0.1.52"
clap = { version = "3.1.1", features = ["derive"] }
mysql_async = "0.29.0"
reqwest = { version = "0.11.9", features = ["json", "blocking"] }
semver = "1.0.6"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
tokio = { version = "1.16.1", features = ["full"] }
