[package]
name = "vero"
version = "0.1.2"
authors = ["Boban Acimovic <boban.acimovic@gmail.com>"]
license = "BSD-2-Clause-Patent"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.57"
async-trait = "0.1.53"
clap = { version = "3.1.18", features = ["derive"] }
mysql_async = "0.30.0"
reqwest = { version = "0.11.10", features = ["json", "blocking"] }
semver = "1.0.9"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
tokio = { version = "1.18.2", features = ["full"] }

[replace]
"getrandom:0.2.6" = { git = "https://github.com/rust-random/getrandom" }
