[package]
name = "vero"
version = "0.1.2"
authors = ["Boban Acimovic <boban.acimovic@gmail.com>"]
license = "BSD-2-Clause-Patent"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
clap = { version = "4.0", features = ["derive"] }
mysql_async = "0.31"
reqwest = { version = "0.11", features = ["json", "blocking"] }
semver = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.21", features = ["full"] }
